Correct flex wrap on items, style footer

--- a/style.css
+++ b/style.css
@@ -104,8 +104,9 @@ button:hover {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  margin-top: 30px;
-  height: 350px;
+  margin: 30px 10%;
+  min-height: 350px;
+  height: auto;
 }
 
 .information h3 {
@@ -117,9 +118,11 @@ button:hover {
 
 .info-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  flex-wrap: wrap;
   gap: 50px;
   margin-top: 0px;
+  height: auto;
 }
 
 .information .item {
@@ -199,4 +202,18 @@ button:hover {
 
 #bottom-button {
   border: 2px solid white;
+}
+
+.footer-container {
+  background-color: #1f2937;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  min-height: 80px;
+}
+
+.foot {
+  color: #e5e7eb;
+  font-size: 18px;
 }
